--- a/TMS/appsettings.json
+++ b/TMS/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DB_TaskManagement;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
